# ChangeLog for x11-misc/py3status
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/py3status/ChangeLog,v 1.13 2015/01/23 17:06:51 ultrabug Exp $

*py3status-2.2 (23 Jan 2015)

  23 Jan 2015; Ultrabug <ultrabug@gentoo.org> -py3status-2.0.ebuild,
  -py3status-2.1.ebuild, +py3status-2.2.ebuild:
  version bump, drop old

*py3status-2.1 (09 Jan 2015)

  09 Jan 2015; Ultrabug <ultrabug@gentoo.org> +py3status-2.1.ebuild:
  version bump

*py3status-2.0 (04 Jan 2015)

  04 Jan 2015; Ultrabug <ultrabug@gentoo.org> -py3status-1.4.ebuild,
  -py3status-1.5.ebuild, +py3status-2.0.ebuild:
  version bump, drop old

*py3status-1.6 (08 Oct 2014)

  08 Oct 2014; Ultrabug <ultrabug@gentoo.org> -py3status-1.2.ebuild,
  -py3status-1.3.ebuild, +py3status-1.6.ebuild:
  version bump, drop old

*py3status-1.5 (03 May 2014)

  03 May 2014; Ultrabug <ultrabug@gentoo.org> +py3status-1.5.ebuild:
  version bump

  16 Apr 2014; Ultrabug <ultrabug@gentoo.org> py3status-1.2.ebuild,
  py3status-1.3.ebuild, py3status-1.4.ebuild:
  add python3_4 compat

*py3status-1.4 (16 Apr 2014)

  16 Apr 2014; Ultrabug <ultrabug@gentoo.org> -py3status-1.1.ebuild,
  +py3status-1.4.ebuild:
  version bump, drop old

*py3status-1.3 (23 Feb 2014)

  23 Feb 2014; Ultrabug <ultrabug@gentoo.org> -py3status-1.0.ebuild,
  +py3status-1.3.ebuild:
  version bump, drop old

*py3status-1.2 (12 Jan 2014)

  12 Jan 2014; Ultrabug <ultrabug@gentoo.org> +py3status-1.2.ebuild:
  version bump

*py3status-1.1 (15 Dec 2013)

  15 Dec 2013; Ultrabug <ultrabug@gentoo.org> +py3status-1.1.ebuild:
  version bump

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> py3status-1.0.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  31 Aug 2013; Kacper Kowalik <xarthisius@gentoo.org> py3status-1.0.ebuild:
  Fix dependency on setuptools

*py3status-1.0 (29 Aug 2013)

  29 Aug 2013; Ultrabug <ultrabug@gentoo.org> +py3status-1.0.ebuild,
  +metadata.xml: